<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mobile Programming : Ex4</string>
    <string name="new_joke">New Joke</string>
    <string name="write_joke">Write a Joke</string>
    <string name="write_date">Enter Date</string>
    <string name="write_author">Enter Author\'s Name</string>
    <string name="enter_date">Please Choose Date of Joke\'s invention</string>
    <string name="add_new_joke">ADD</string>
    <string name="edit_joke">Edit Joke</string>
    <string name="hint_message">text to pass to screen 2</string>
    <string name="edit_message2">text to pass to screen 3</string>
    <string name="button_send">Add Joke</string>
    <string name="button_send2">Next</string>
    <string name="button_send3">Save</string>
    <string name="Activity_Main">Activity Main</string>
    <string name="no_jokes">No jokes. Click option menu to add more jokes</string>
    <string name="info">Click option Menu to Change BG or exit</string>

    <string name="done_joke">Done Editing Joke</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="edit_alert_dialog_two_buttons_title">Do you want to save the Joke ?</string>
    <string name="exit_alert_dialog_two_buttons_title">Do you really want to exit ?</string>

    <string name="warning">Warning</string>

    <string name="alert_dialog_yes">yes</string>
    <string name="alert_dialog_no">no</string>

    <string name="alert_dialog_exit">EXIT</string>
    <string name="alert_dialog_cancel_exit">Dont Exit</string>


</resources>