<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.owner.myapplication.ActivityAddJoke">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/holo_blue_light"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <TextView
                android:id="@+id/text_ad_joke"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/new_joke"
                android:textColor="@android:color/black"
                android:textColorHighlight="@android:color/primary_text_dark"
                android:layout_centerVertical="true"
                android:textSize="50dp"/>

        </LinearLayout>

        //edt text layout

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="162dp"
            android:weightSum="1">

            <EditText

                android:background="@drawable/customborder"
                android:id="@+id/text_joke"
                android:layout_width="361dp"
                android:layout_height="147dp"
                android:hint="@string/write_joke" />

        </LinearLayout>

        // author's layout

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"

            android:orientation="horizontal"
            android:layout_weight="0.42"
            android:weightSum="1">

            <TextView
                android:layout_width="80dp"
                android:layout_height="45dp"
                android:text="@string/write_author"
                android:id="@+id/textView"
                android:layout_weight="0.25"
                />

            <EditText
                android:background="@drawable/customborder"
                android:layout_width="150dp"
                android:layout_height="46dp"
                android:hint="    write here"
                android:layout_weight="0.43"
                android:id="@+id/text_author"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "/>
        </LinearLayout>

        //date layout



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"

            android:orientation="horizontal"
            android:layout_weight="0.42"
            android:weightSum="1">

            <TextView
                android:layout_width="80dp"
                android:layout_height="45dp"
                android:text="@string/write_date"
                android:id="@+id/textAuthor"
                android:layout_weight="0.25"
                />

            <EditText
                android:background="@drawable/customborder"
                android:layout_width="150dp"
                android:layout_height="46dp"
                android:hint="    write here"
                android:layout_weight="0.43"
                android:id="@+id/text_date"
                android:digits="./1234567890"/>
        </LinearLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/joke"
                android:id="@+id/imageButton2" />

            <Button
                android:layout_gravity="center"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/add_new_joke"
                android:id="@+id/button"
                android:layout_marginRight="17dp"
                android:layout_marginEnd="17dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:onClick="sendJoke"
                />

        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>
